Move data to iam_units/data; include in packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ long_description_content_type = text/x-markdown
 url = https://github.com/IAMconsortium/units
 
 [options]
+packages = iam_units
 include_package_data = True
 install_requires =
     pint >= 0.11
@@ -15,3 +16,7 @@ install_requires =
 setup_requires =
     setuptools >= 41
     setuptools_scm
+
+[options.package_data]
+iam_units =
+    data/*
