Convert README to reStructuredText

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = iam_units
 author = Integrated Assessment Modeling Consortium members
 author_email = mail@paul.kishimoto.name
 description = Unit definitions for integrated-assessment research
-long_description = file: README.md
-long_description_content_type = text/x-markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/IAMconsortium/units
 
 [options]
