Add AUTHORS, GPLv3 LICENSE

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = iam_units
-author = Integrated Assessment Modeling Consortium members
+author = IAM-units authors
 author_email = mail@paul.kishimoto.name
+license = GPLv3
 description = Unit definitions for integrated-assessment research
 long_description = file: README.rst
 long_description_content_type = text/x-rst
