Remove .travis.yml, adjust GitHub CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
         pytest --verbose
     - name: Test package build
       run: |
-        pip install twine
+        pip install twine wheel
         python3 setup.py bdist_wheel sdist
         twine check dist/*
