--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        find . -name "*.py" | flake8 --count --max-complexity=5 \
+        find . -name "*.py" | flake8 --count --max-complexity=6 \
                                      --show-source --statistics
     - name: Install and test with pytest
       run: |
-        pip install pytest setuptools-scm
+        pip install numpy pytest setuptools-scm
         pip install --editable .
         pytest --verbose
     - name: Test package build
