Add py.typed and mypy configuration in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,14 @@ setup_requires =
 [options.package_data]
 iam_units =
     data/*
+
+[mypy]
+# Empty section required as of mypy 0.800;
+# see https://github.com/python/mypy/issues/9940
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+[mypy-pint.*]
+ignore_missing_imports = True
+[mypy-setuptools.*]
+ignore_missing_imports = True
