Blacken test_all.py; address flake8 errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ setup_requires =
 iam_units =
     data/*
 
+[flake8]
+max-line-length = 88
+
 [mypy]
 # Empty section required as of mypy 0.800;
 # see https://github.com/python/mypy/issues/9940
