--- a/setup.cfg
+++ b/setup.cfg
@@ -18,12 +18,11 @@ setup_requires =
     setuptools >= 41
     setuptools_scm
 
-[options.package_data]
-iam_units =
-    data/*
-
 [flake8]
 max-line-length = 88
+
+[isort]
+profile = black
 
 [mypy]
 # Empty section required as of mypy 0.800;
