Install numpy, pytest in "lint" CI workflow for type hints

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -40,5 +40,6 @@ jobs:
 
     - name: Check typing with mypy
       run: |
-        pip install mypy
+        # Also install packages that provide type hints
+        pip install mypy numpy pytest
         mypy .
