--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,9 +19,9 @@ jobs:
 
     - name: Install and test with pytest
       run: |
-        pip install numpy pytest setuptools-scm
+        pip install numpy pytest pytest-cov setuptools-scm
         pip install --editable .
-        pytest --verbose
+        pytest --verbose --cov-report=xml
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v1.2.1
