Add `globalwarmingpotentials` as extra per review comment by @khaeru

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,10 @@ setup_requires =
     setuptools >= 41
     setuptools_scm
 
+[options.extras_require]
+update =
+    globalwarmingpotentials
+
 [flake8]
 max-line-length = 88
 
