Add placeholder for failing tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
+# placeholder to demonstrate the tests with the new pint version are failing
 [metadata]
 name = iam_units
 author = IAM-units authors
