Add pint>=0.17 pin

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ url = https://github.com/IAMconsortium/units
 packages = iam_units
 include_package_data = True
 install_requires =
-    pint >= 0.11
+    pint <= 0.17
     setuptools >= 41
 setup_requires =
     setuptools >= 41
