Add classifiers in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,18 @@ description = Unit definitions for integrated-assessment research
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 url = https://github.com/IAMconsortium/units
+classifiers =
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Information Analysis
 
 [options]
 packages = iam_units
