--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,9 +25,12 @@ jobs:
     name: pint${{ matrix.pint-version }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
+      with:
+        cache: pip
+        cache-dependency-path: "**/pyproject.toml"
 
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
@@ -40,4 +43,4 @@ jobs:
         pytest -rA --verbose --color=yes --cov=iam_units --cov-report=xml
 
     - name: Upload test coverage to Codecov.io
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v3
