--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,38 +8,9 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
-
-    continue-on-error: true
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - uses: actions/setup-python@v2
-
-    - name: Cache Python packages
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cache/pip
-        key: lint-${{ runner.os }}
-
-    - name: Upgrade pip, wheel, setuptools-scm
-      run: python -m pip install --upgrade pip wheel setuptools-scm
-
-    - name: Check "black" code style
-      run: |
-        pip install black
-        black --check .
-
-    - name: Lint with flake8 & isort
-      run: |
-        pip install flake8 isort
-        flake8 --count --max-complexity=8 --show-source --statistics
-        isort --check-only .
-
-    - name: Check typing with mypy
-      run: |
-        # Also install packages that provide type hints
-        pip install mypy numpy pytest
-        mypy .
+    uses: iiasa/actions/.github/workflows/lint.yaml@main
+    with:
+      type-hint-packages: >-
+        numpy
+        pint
+        pytest
