--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,15 +32,18 @@ jobs:
         cache: pip
         cache-dependency-path: "**/pyproject.toml"
 
-    - name: Upgrade pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install and test with pytest
+    - name: Install
       run: |
-        pip install numpy pytest pytest-cov setuptools-scm
-        pip install --editable .
+        python -m pip install --upgrade pip
+        pip install .[tests]
+        # Force a specific version of pint
         pip install pint${{ matrix.pint-version }}
-        pytest -rA --verbose --color=yes --cov=iam_units --cov-report=xml
+
+    - name: Test
+      run: |
+        pytest iam_units \
+          -rA -vv --color=yes \
+          --cov=iam_units --cov-report=xml
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v3
