--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Topic :: Scientific/Engineering",
   "Topic :: Scientific/Engineering :: Information Analysis",
 ]
-dependencies = ["pint >= 0.11"]
+dependencies = ["pint >= 0.11", "typing_extensions; python_version < '3.8'"]
 
 [project.urls]
 homepage = "https://github.com/IAMconsortium/units"
