--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,6 +29,7 @@ jobs:
 
     - uses: actions/setup-python@v4
       with:
+        python-version: "3.x"
         cache: pip
         cache-dependency-path: "**/pyproject.toml"
 
