Add fail-fast: false to "test" CI workflow
Allow other matrix jobs to complete even after one fails.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,8 @@ jobs:
         - pint-version: ""
           python-version: "3.10"
 
+      fail-fast: false
+
     name: "python:${{ matrix.python-version }} pint:${{ matrix.pint-version }}"
 
     steps:
