--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,16 +30,16 @@ jobs:
     steps:
     - uses: actions/checkout@v5
 
-    - uses: actions/setup-python@v6
+    - name: Set up uv, Python
+      uses: astral-sh/setup-uv@v6
       with:
+        activate-environment: true
+        enable-cache: true
         python-version: ${{ matrix.python-version }}
 
-    - name: Install
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[tests]
-        # Force a specific version of pint
-        pip install pint${{ matrix.pint-version }}
+    - name: Install the package and dependencies
+      # Force a specific version of pint
+      run: uv pip install .[tests] pint${{ matrix.pint-version }}
 
     - name: Test
       run: |
@@ -48,9 +48,8 @@ jobs:
           --cov=iam_units --cov-report=xml
 
     - name: Test update code
-      run: |
-        # Analogous to "python -m iam_units.update …"
-        coverage run --append -m iam_units.update emissions || exit 0
+      # Analogous to "python -m iam_units.update …", but measures coverage
+      run: coverage run --append -m iam_units.update emissions || exit 0
 
     - name: Upload test coverage to Codecov.io
       uses: codecov/codecov-action@v5
@@ -64,9 +63,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v5
-    - uses: actions/setup-python@v6
-    - name: Force recreation of pre-commit virtual environment for mypy
-      if: github.event_name == 'schedule'  # Comment this line to run on a PR
-      run: gh cache delete $(gh cache list -L 999 | cut -f2 | grep pre-commit)
-      env: { GH_TOKEN: "${{ github.token }}" }
-    - uses: pre-commit/action@v3.0.0
+    - uses: astral-sh/setup-uv@v6
+      with: { enable-cache: true, python-version: "3.13" }
+    - name: Clear and re-create the pre-commit environments
+      run: uvx pre-commit clean
+      if: github.event_name == 'schedule'  # Comment this line to force clear
+    - run: |
+        uvx --with=pre-commit-uv \
+          pre-commit run \
+          --all-files --color=always --show-diff-on-failure --verbose
